changes to presentation

--- a/presentation.html
+++ b/presentation.html
@@ -1616,8 +1616,22 @@ Frederick, Sofia, Alex
 <ul>
 <li><p>based off of literature found</p>
 <ul>
-<li>show citations</li>
+<li>Campbell, M., Hinton, J. D. X. &amp; Anderson, J. R. (2019) A systematic review of the relationship between religion and attitudes toward transgender and gender-variant people. International Journal of Transgenderism, 20:1, 21-38, DOI: 10.1080/15532739.2018.1545149</li>
+<li>Earle, M. et al. (2021). A multilevel analysis of LGBT (Lesbian, Gay, Bisexual, Transgender) rights support across 77 countries: The role of contact and country laws . British Journal of Social Psychology. doi:10.1111/bjso.12436</li>
 </ul></li>
+</ul>
+</section>
+<section id="section" class="slide level2">
+<h2></h2>
+<pre><code>-   Flores, A. R. (2015) Attitudes toward transgender rights: perceived knowledge and secondary interpersonal contact, Politics, Groups, and Identities, 3:3, 398-416, DOI: 10.1080/21565503.2015.1050414
+-   Flores, A. R., Brown, T. N. T., &amp; Park, A. S. (2016). Public Support for Transgender Rights: A Twenty-three Country Survey. The Williams Institute at UCLA School of Law. http://www.jstor.org/stable/resrep34965
+-   Harrison, B.F., Michelson, M.R. (2019) Gender, Masculinity Threat, and Support for Transgender Rights: An Experimental Study. Sex Roles 80, 63–75. https://doi.org/10.1007/s11199-018-0916-6</code></pre>
+</section>
+<section id="section-1" class="slide level2">
+<h2></h2>
+<pre><code>-   Norton, A.T., Herek, G.M. (2013) Heterosexuals’ Attitudes Toward Transgender People: Findings from a National Probability Sample of U.S. Adults. Sex Roles 68, 738–753.
+-   Williamson, Myles, 2023, &quot;Replication Data for: A Global Analysis of Transgender Rights: Introducing the Trans Rights Indicator Project (TRIP)&quot;, https://doi.org/10.7910/DVN/FXXLTS, Harvard Dataverse, V1, UNF:6:E4O2rb6DFd44VSZjm9SQNQ== \[fileUNF\]</code></pre>
+<ul>
 <li><p>we added country level variables; legal rights of trans individuals variable and benchmark economic variables</p></li>
 <li><p>associative tests to confirm literature and narrow down the variables to X</p>
 <ul>
