Update Script Final Assignment.html

--- a/Script Final Assignment.html
+++ b/Script Final Assignment.html
@@ -1922,7 +1922,7 @@ Kruskal-Wallis chi-squared = 2606.6, df = 2, p-value &lt; 2.2e-16</code></pre>
 <p><strong>Dependent Variable (qc19)</strong></p>
 <p>It relates to this question:</p>
 <p><em>Do you think that transgender persons should be able to change their civil documents to match their inner gender identity?</em></p>
-<p>We will take the values:</p>
+<p>It takes the values:</p>
 <ul>
 <li><p>1 for “Yes”</p></li>
 <li><p>2 for “No”</p></li>
